<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context=".Conversor">


    <Spinner
        android:id="@+id/idSpCriptoMoedas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/border_spinner"
        android:padding="5sp" />


    <Spinner
        android:id="@+id/idSpMoedas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/border_spinner"
        android:paddingVertical="10sp" />


    <EditText
        android:id="@+id/idEtQuantidadeMoedasConverter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="1.0"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/idBtnConverter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/converter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/valor_convertido"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/idTvValorConvertido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="0"
            android:textSize="40sp" />


    </LinearLayout>

    <Button
        android:id="@+id/idBtnAdicionarValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/adicionar_valor_convertido_carteira" />

    <Button
        android:id="@+id/idBtnCarteira"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/visualizar_carteira" />
    <TextView
        android:id="@+id/idTvValorConvertido2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint=""
        android:textSize="0sp"
        android:enabled="true"
        />



</LinearLayout>