<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context=".ActivityPrincipal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/saldo"
            android:textSize="40sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="50"
            android:textColor="@color/white"
            android:textSize="50sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/idBtnConverter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:backgroundTint="#186FB5"
            android:text="@string/conversor" />

        <Button
            android:id="@+id/idBtnCarteira"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#186FB5"
            android:text="@string/visualizar_carteira" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/idBtnAtualizarSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:backgroundTint="#186FB5"
                android:gravity="center"
                app:icon="@android:drawable/ic_popup_sync" />

            <Button
                android:id="@+id/idBtnAdicinarMoeda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#186FB5"
                android:gravity="center"

                android:text="@string/AdicionarMoeda" />

        </LinearLayout>


        <ListView
            android:id="@+id/idLv_moedas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:textColor="@color/white"


            />


    </LinearLayout>


    <TextView
        android:id="@+id/idTvValorConvertido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="0"
        android:textSize="1sp" />
</LinearLayout>